feat: implement stage 3 media reliability (unified process runner, resumable MV download, bounded dual-track concurrency, streaming AI service)